--- a/css/blog.css
+++ b/css/blog.css
@@ -68,3 +68,16 @@
     margin-bottom: 50px;
 
 }
+
+@media(max-width:1110px){
+    .blogs-container{
+        grid-template-columns: 1fr 1fr;
+        padding: 20px;
+    }
+}
+@media(max-width:600px){
+    .blogs-container{
+        grid-template-columns: 1fr;
+        padding: 20px;
+    }
+}
