--- a/css/styles.css
+++ b/css/styles.css
@@ -94,7 +94,59 @@ h6 {
 	color: #333;
 	font: 700 1rem/1.625rem "Montserrat", sans-serif;
 }
+li{
+	list-style: none;
+}
+.about-link{
+	position: relative;
+}
+/* .dropdown-menu.about-drop{
 
+	background-color: #148EBF;
+	display: flex;
+	flex-direction: column;
+	gap: 10px;
+	width: 250px;
+} */
+/* .course-drop{
+	position: absolute;
+	top: 70px;
+	right: 150px;
+	/* left: 50px; */
+	/* background-color: #148EBF; */
+	/* display: flex; */
+	/* flex-direction: column; */
+	/* justify-content: center; */
+	/* align-items: center; */
+	/* gap: 10px; */
+	/* width: 100%; */
+	/* width: 250px;
+	height: 0px;
+	overflow: hidden;
+	transition: height .5s ease-in-out; */
+/* }
+.about-drop li a,.course-drop li a{
+	color: #fff;
+	text-decoration: none;
+}
+.about-drop li a:hover,.course-drop li a:hover{
+	color: #93d8f3;
+}
+.about-drop li,.course-drop li{
+	padding: 10px 0;
+}
+.about-drop li:first-child,.course-drop li:first-child{
+	padding-top: 20px;
+}
+.about-drop li:last-child,.course-drop li:last-child{
+	padding-bottom: 20px;
+}
+.about-link:hover .about-drop{
+	height: 190px;
+}
+.course-link:hover .course-drop{
+	height: 270px;
+} */ 
 .testimonial-text {
 	font-style: italic;
 }
@@ -717,7 +769,7 @@ input[type='checkbox'] {
 }
 
 .navbar-custom .dropdown-item:hover .item-text {
-	color: #ffbd50;
+	color: #148EBF;
 }
 
 .navbar-custom .dropdown-divider {
@@ -857,6 +909,14 @@ input[type='checkbox'] {
 	/* border-radius: 0.75rem; */
 }
 
+.course-title a{
+	text-decoration: none;
+	color: #333;
+}
+
+.course-title a:hover{
+	color: #148EBF;
+}
 .header .swiper-container img {
 	/* border-radius: 0.75rem; */
 }
@@ -979,8 +1039,9 @@ input[type='checkbox'] {
 
 .basic-1 img {
 	/* margin-bottom: 2.5rem; */
-	height: 100%;
+	height: 90%;
 	border-radius: 0.25rem;
+	transform: translateY(33px);
 }
 
 .basic-1 .text-container{
@@ -1273,6 +1334,7 @@ input[type='checkbox'] {
 	margin-right: auto;
 	margin-bottom: 4rem;
 	margin-left: auto;
+	width: 100%;
 	padding: 3rem 1.625rem 1.75rem 1.625rem;
 	border: none;
 	background-color: #fff;
@@ -1292,7 +1354,7 @@ input[type='checkbox'] {
 
 .cards .fas,
 .cards .far {
-	color: #ffbd50;
+	color: #148EBF;
 	font-size: 3rem;
 	line-height: 6rem;
 }
@@ -1717,8 +1779,8 @@ a:hover.back-to-top {
 
 
 .huwawei{
-	width: 50%;
-	height: 50%;
+	width: 100%;
+	height: 100%;
 }
 
 /*****************************/
@@ -1823,7 +1885,7 @@ a:hover.back-to-top {
 	/* Navigation */
 	.navbar-custom {
 		padding: 1rem 5rem 1rem 4rem;
-        background: transparent;
+		background: transparent;
 		box-shadow: none;
 	}
 	
@@ -2242,3 +2304,28 @@ a:hover.back-to-top {
 	/* end of extra pages */
 }
 /* end of min-width width 1200px */
+.about-sub{
+	padding-left: 20px;
+	display: none;
+}
+@media(max-width:990px){
+	.about-link{
+		position: static;
+	}
+	.about-drop{
+		display: none;
+	}
+	.course-link{
+		position: static;
+	}
+	.course-drop{
+		display: none;
+	}
+	.about-drop li a,.course-drop li a{
+		color: #000;
+		text-decoration: none;
+	}
+	.about-drop li a:hover,.course-drop li a:hover{
+		color: rgb(66, 66, 66);
+	}
+}
