--- a/css/counter.css
+++ b/css/counter.css
@@ -1,28 +1,45 @@
-.counter {
-    background-color:#f5f5f5;
-    padding: 20px 0;
-    border-radius: 5px;
+.counts{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-.count-title {
-    font-size: 40px;
-    font-weight: normal;
-    margin-top: 10px;
-    margin-bottom: 0;
-    text-align: center;
+.counts div{
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+    padding: 10px;
+    gap: 10px;
+}
+.counters{
+    background-color: #148EBF;
+    padding: 20px;
+}
+.counts{
+    color: #fff;
+}
+.counts div h3{
+    color: #fff;
+}
+.counts div i{
+    font-size: 50px;
+}
+.counts div div{
+    font-size: 18px;
 }
 
-.count-text {
-    font-size: 13px;
-    font-weight: normal;
-    margin-top: 10px;
-    margin-bottom: 0;
-    text-align: center;
+@media(max-width:1100px){
+    .counts{
+        grid-template-columns: 1fr 1fr;
+    }
+    
 }
-
-.fa-2x {
-    margin: 0 auto;
-    float: none;
-    display: table;
-    color: #4ad1e5;
+@media(max-width:650px){
+    .counts{
+        grid-template-columns: 1fr;
+    }
+    .count-item{
+        border-bottom: 1px solid #fff;
+    }
 }
